better chat logic